--- a/hw_1.ipynb
+++ b/hw_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 150,
    "id": "889380d6",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 151,
    "id": "b6761d09",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 152,
    "id": "c117c62c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 153,
    "id": "ae19f406",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 154,
    "id": "ed9fabbb",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 155,
    "id": "ef4ea7c4",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        " 'Воля': 12}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 156,
    "id": "df3bb6d4",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 157,
    "id": "3ba4afa7",
    "metadata": {},
    "outputs": [],
@@ -103,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "f5f10c41",
+   "execution_count": 158,
+   "id": "71e75b0b",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "121"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 159,
    "id": "14665476",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 160,
    "id": "f91d35fa",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 161,
    "id": "f3f17586",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 162,
    "id": "59913e01",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 163,
+   "id": "73d266ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "party_dict = {\n",
+    "    'ГЕРБ': 'GERB',\n",
+    "    'БСП за Болгарию': 'BSPzB',\n",
+    "    'Объединённые патриоты': 'OP',\n",
+    "    'Движение за права и свободы': 'DPS',\n",
+    "    'Воля': 'Volya'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "084f3b5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def translate(party):\n",
+    "    return party_dict[party]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "eeafcf2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GERB, BSPzB — 175\n",
+      "GERB, OP — 122\n",
+      "GERB, DPS — 121\n",
+      "GERB, BSPzB, OP — 202\n",
+      "GERB, BSPzB, DPS — 201\n",
+      "GERB, BSPzB, Volya — 187\n",
+      "GERB, OP, DPS — 148\n",
+      "GERB, OP, Volya — 134\n",
+      "GERB, DPS, Volya — 133\n",
+      "BSPzB, OP, DPS — 133\n",
+      "GERB, BSPzB, OP, DPS — 228\n",
+      "GERB, BSPzB, OP, Volya — 214\n",
+      "GERB, BSPzB, DPS, Volya — 213\n",
+      "GERB, OP, DPS, Volya — 160\n",
+      "BSPzB, OP, DPS, Volya — 145\n",
+      "GERB, BSPzB, OP, DPS, Volya — 240\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [[list(map(translate, x)), get_vote_sum(x)] for x in winning_coalitions]:\n",
+    "    print(', '.join(i[0]),'—', i[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "id": "e667431a",
    "metadata": {},
    "outputs": [],
@@ -189,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 167,
    "id": "4dcf1963",
    "metadata": {},
    "outputs": [
@@ -215,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 168,
    "id": "640514e4",
    "metadata": {},
    "outputs": [],
@@ -224,14 +285,14 @@
     "    'ГЕРБ': 12,\n",
     "    'БСП за Болгарию': 4,\n",
     "    'Объединённые патриоты': 4,\n",
-    "    'Движение за права и свободы': 3,\n",
+    "    'Движение за права и свободы': 4,\n",
     "    'Воля': 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 169,
    "id": "35a2be4e",
    "metadata": {},
    "outputs": [],
@@ -241,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 170,
    "id": "77774996",
    "metadata": {},
    "outputs": [],
@@ -253,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 171,
    "id": "91f327b5",
    "metadata": {
     "scrolled": true
@@ -268,17 +329,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "c11b08be",
+   "execution_count": 172,
+   "id": "385036c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "[0.5, 0.16666666666666666, 0.16666666666666666, 0.16666666666666666, 0.0]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "e9dccd1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999999999999"
+      ]
+     },
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 174,
    "id": "021bd82b",
    "metadata": {},
    "outputs": [],
@@ -310,8 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "f61ddae6",
+   "execution_count": 175,
+   "id": "1485c659",
    "metadata": {},
    "outputs": [
     {
@@ -339,8 +421,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "56114800",
+   "execution_count": 176,
+   "id": "a6a95f77",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +431,7 @@
        "1.0"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,6 +439,22 @@
    "source": [
     "sum(indices)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4431927",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc7560e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
